# MurrLab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_FILE_AUDIT.md  CONTRIBUTING.md  ENHANCED_README.md  ERROR_FIXES_COMPLETE.md  README.md  SECURITY.md  SETUP_GUIDE.md  SYSTEM_RUNNING_DEMO.md  advanced_voice_api.py  datasets_download_and_split.py  dev_quickstart.py  enhanced_voice_platform.py  example_for_mac.py  example_tts.py  example_vc.py  gradio_tts_app.py  gradio_vc_app.py  launch_platform.py  my_tts_experiments.py  pyproject.toml  quick_start.py  requirements.txt  run_all_services.py  run_api_server.py  run_ui_streamlit.py  test_tts_fixes.py  voice_dataset_manager.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.gradio/flagged/: dataset1.csv
apps/: README.md
apps/api/: advanced_voice_api.py
apps/gradio/: tts_app.py  vc_app.py
apps/streamlit/: enhanced_voice_platform.py
examples/: example_tts.py  example_vc.py
public/: 404.html  _redirects  contact.html  index.html  services.html
src/chatterbox/: __init__.py  tts.py  vc.py
src/chatterbox/models/t3/: t3.py
src/murr/: __init__.py  tts.py  vc.py
src/murr/models/s3gen/: __init__.py  hifigan.py
src/murr/models/s3tokenizer/: __init__.py  s3tokenizer.py
src/murr/models/t3/: __init__.py  t3.py
src/murr/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
src/murr/models/tokenizers/: __init__.py
src/murr/models/voice_encoder/: __init__.py  voice_encoder.py
tests/: test_tts.py
