[project]
name = "chatterbox-tts"
version = "0.1.2"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3"
]

[project.urls]
Homepage = "https://github.com/DisMurr/MurrLab"
Repository = "https://github.com/DisMurr/MurrLab"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
web = [
    "streamlit>=1.49.0",
    "gradio>=5.46.0"
]
api = [
    "fastapi>=0.117.0",
    "uvicorn>=0.36.0"
]
asr = [
    "openai-whisper>=20231117"
]
datasets = [
    "datasets>=4.1.0",
    "accelerate>=1.10.0"
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.9"
]
